# cpppython

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  script.py  script2.py  thing.py
classes/: CppSineFitter.cpp  CppSineFitter.h  DataAnalysisApp.cpp  DataAnalysisApp.h  MainWindow.cpp  MainWindow.h  PlotWidget.cpp  PlotWidget.h  PlotWidgetImpl.cpp  PlotWidgetImpl.h  PlotWidgetWrapper.cpp  PlotWidgetWrapper.h  PythonEngine.cpp  PythonEngine.h  PythonHighlighter.cpp  PythonHighlighter.h  QtOutputBuffer.cpp  QtOutputBuffer.h  pybind11_bindings.cpp  qcustomplot_wrapper.h
